<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home_fragment"
        android:icon="@drawable/btn_navigation_selected_home"
        android:title="@string/btn_navigation_home" />

    <item
        android:id="@+id/nav_location_fragment"
        android:icon="@drawable/btn_navigation_selected_calendar"
        android:title="@string/btn_navigation_schedule" />

    <item
        android:id="@+id/nav_schedules_fragment"
        android:icon="@drawable/btn_navigation_selected_speakers"
        android:title="@string/btn_navigation_speakers" />

    <item
        android:id="@+id/nav_speakers_fragment"
        android:icon="@drawable/btn_navigation_selected_location"
        android:title="@string/btn_navigation_map"/>
</menu>